# bazel-practices

./: .gitignore  README.md
.github/workflows/: main.yml
angular-demo/agular-bazel-build-demo/: .gitignore  BUILD.bazel  MODULE.bazel  README.md  angular.json  bazel-agular-bazel-build-demo  bazel-bin  bazel-testlogs  defs.bzl  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
angular-demo/agular-bazel-build-demo/src/: index.html
angular-demo/agular-bazel-build-demo/src/app/: app.component.spec.ts  app.component.ts
firstPractice/: BUILD  MODULE.bazel  go.mod  package.json  requirements.in  requirements.txt
firstPractice/projects/calculator/: BUILD  calculator_test.py
firstPractice/projects/go_hello_world/: BUILD
firstPractice/projects/go_web/: BUILD  main.go
firstPractice/projects/my_py_app/: BUILD  main.py
firstPractice/projects/projectA/: BUILD
firstPractice/projects/projectB/: BUILD
